--- a/src/App.css
+++ b/src/App.css
@@ -259,7 +259,75 @@ font-weight: 600;
 .news-card:hover .details {
   left: 0%;
 }
-@media (min-width: 640px) {
+
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+ 
+.search-bar{
+  flex-basis: 70%;
+}
+.ui.input{
+  min-width: 100%;
+}
+.prompt{
+  border-radius: 3px !important;
+} 
+
+
+@media screen and (max-width: 800px) {
+ .checkbtn{
+    display: block;
+    color: #131313;
+  }
+  .navbar-nav{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #131313; 
+    top: 0;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+    z-index: 10;
+  }
+  .navbar-nav li{
+    display: block;
+    margin: 0px 0;
+    line-height: 30px;
+    clear: both;
+    color: #fff;
+  }
+  .navbar-nav li a{
+    font-size: 20px;
+  }
+  .navbar-nav li a:hover,.navbar-nav li a.active{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }   
+}
+
+@media (max-width: 600px) {
+  .header-container{
+    gap: 1em; 
+  }
+  #logo-head{
+    margin: 1em 1em 0;
+    padding: 0;
+
+  }
   .news-card {
       flex-direction: row;
       max-width: 900px;
@@ -294,13 +362,3 @@ font-weight: 600;
       padding-left: 25px;
  }
 }
-
-.search-bar{
-  flex-basis: 70%;
-}
-.ui.input{
-  min-width: 100%;
-}
-.prompt{
-  border-radius: 3px !important;
-} 
