--- a/src/App.css
+++ b/src/App.css
@@ -284,63 +284,10 @@ font-weight: 600;
 } 
 
 
-@media screen and (max-width: 800px) {
- .checkbtn{
-    display: block;
-    color: #131313;
-  }
-  .navbar-nav{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #131313; 
-    top: 0;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-    z-index: 10;
-    padding: 3em 3em;
-  }
-  .navbar-nav li{
-    display: block;
-    margin: 0px 0;
-    line-height: 30px;
-    clear: both;
-    color: #fff;
-  }
-  .navbar-nav li a{
-    font-size: 20px;
-  }
-  .navbar-nav li a:hover,.navbar-nav li a.active{
-    background: none;
-    color: #0082e6;
-  }
-  #check:checked ~ ul{
-    left: 0;
-  }
-  .header-container{
-    gap: 0.5em; 
-    align-items: center;
-  }
-  #logo-head{
-    margin: 1em auto;
-  }   
-  .logo{
-    float: left;
-width: 100%;
-  }
-}
 
-@media (min-width: 640px) {
-  .header-container{
-    gap: 1em; 
-    align-items: center;
-  }
-  #logo-head{
-    margin: 1em 1em 0;
-    padding: 0;
 
-  }
+
+@media screen and (min-width: 600px) {
   .news-card {
       flex-direction: row;
       max-width: 900px;
