--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.theme-light {
+  --color-title: #ff3000;
+  --color-subtitle: #0000001a;
+  --color-underline: #ff3000;
+  --font-color: #444; 
+}
+.theme-dark {
+  --color-title: #fff;
+  --color-subtitle: #060606;
+  --color-underline: #ffffff24;
+  --font-color: #fff; 
+}
 .justify-content-between {
   justify-content: space-between !important;
 }
@@ -120,10 +132,13 @@ color: #3d3636;
   margin-bottom: 1.6%;
   background: #fff;
   line-height: 1.4;
-  font-family: sans-serif;
+  
   border-radius: 5px;
   overflow: hidden;
   z-index: 0;
+  border-radius: 3px;
+  margin-top: 1em;
+border: solid 1px #ddd;
 }
 .news-card a {
   color: inherit;
@@ -252,6 +267,7 @@ font-weight: 600;
   position: absolute;
   height: 5px;
   background: #5ad67d;
+  background: #5ad67d;
   width: 35px;
   top: -0.75rem;
   border-radius: 3px;
@@ -321,4 +337,36 @@ font-weight: 600;
   .news-card.alt .details {
       padding-left: 25px;
  }
+}
+
+.block-title > span {
+  color: #ff3000 !important;
+font-size: 24px !important;
+font-weight: 900 !important;
+}
+
+.block-title {
+  font-size: 26px;
+  font-weight: 800;
+  margin-bottom: 26px;
+  line-height: 26px !important;
+  padding: 0;
+  letter-spacing: -0.6px;
+  margin-top: 36px;
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  text-align: left;
+}
+ .block-subtitle {
+  font-size: 90px;
+  text-transform: uppercase;
+  position: absolute;
+  left: -4px;
+  z-index: -1;
+  bottom: -20px;
+  white-space: nowrap;
+  color: #f3f3f3;
+  line-height: 1;
+  color: #0000001a;
+line-height: 1;
 }
