--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ code {
 body {
     /*background: #FFF;*/
     background: #f1f1f1;
+    background: #fff;
     margin: 2rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
