--- a/src/App.css
+++ b/src/App.css
@@ -2,74 +2,111 @@
   --color-title: #ff3000;
   --color-subtitle: #0000001a;
   --color-underline: #ff3000;
-  --font-color: #444; 
+  --font-color: #444;
 }
+
 .theme-dark {
   --color-title: #fff;
   --color-subtitle: #060606;
   --color-underline: #ffffff24;
-  --font-color: #fff; 
+  --font-color: #fff;
 }
+
 .justify-content-between {
-  justify-content: space-between !important;
+  justify-content: space-between;
 }
+
 .align-items-center {
-  align-items: center !important;
+  align-items: center;
+}
+.align-items-top {
+  align-items: flex-start;
 }
 .d-flex {
-  display: flex !important;
+  display: flex;
 }
-.header-container{
+.d-flex-rows {
+flex-direction: row;
+}
+.flex-basis-20{
+  flex-basis: 20% ;
+}
+.flex-basis-30{
+  flex-basis: 30% ;
+}
+.flex-basis-40{
+  flex-basis: 40% ;
+}
+.flex-basis-50{
+  flex-basis: 50% ;
+}
+.flex-basis-60{
+  flex-basis: 60% ;
+}
+.flex-basis-70{
+  flex-basis: 70% ;
+}
+.flex-basis-80{
+  flex-basis: 80% ;
+}
+.header-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
   gap: 3rem;
-   
   justify-content: space-between;
 }
+
 #logo-head {
   float: left;
   margin: 1.5em 0;
+  margin-bottom: 8px;
 }
-.weather-container{
+#news_search{
+  min-width: 400px;
+}
+.weather-container {
   margin: 0;
-   }
-   
-  .weather_info{
-    float: right;
-  }
-   .weather_info__container h2,.weather_info__container h1{
-    padding: 0;
-    padding-right: 0px;
+}
+
+.weather_info {
+  float: right;
+}
+
+.weather_info__container h2,
+.weather_info__container h1 {
+  padding: 0;
+  padding-right: 0px;
   font-size: 12px;
   float: left;
-  margin: 1em; 
+  margin: 1em;
   padding-right: 2em;
   text-align: center;
-   }
-    
-  .weather_info__container h2{
-    font-size: 18px;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .weather_info__container h2 > img{
-    float: left;
-    margin: 0;
-    width: 100%;
-  }
-  .weather_info__container h1{
-    text-align: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  
-  }
- .footer{
+}
+
+.weather_info__container h2 {
+  font-size: 18px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.weather_info__container h2>img {
+  float: left;
+  margin: 0;
+  width: 100%;
+}
+
+.weather_info__container h1 {
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.footer {
   background: #262424;
   color: #fff;
   position: relative;
@@ -77,31 +114,37 @@
   left: 0;
   width: 100%;
   padding: 1em 0;
-  }
-  .footer hr{
-      border: none;
-      border-bottom: solid 1px #474343;
-  }
-  .copyright{
-      padding: 1em 0;
-  }
-  .tag-line{
-      font-size: 14px;
-color: #ac542a;
-letter-spacing: .9px;
-  }
-  
-  .header-bottom-wrap {
-    border-top: 1px solid #DFDFDF;
-    border-bottom: 4px solid #131313; 
-padding: 11px 0;
-margin-bottom: 2em;
-  }
-.navbar-nav{
+}
+
+.footer hr {
+  border: none;
+  border-bottom: solid 1px #474343;
+}
+
+.copyright {
+  padding: 1em 0;
+}
+
+.tag-line {
+  font-size: 14px;
+  color: #ac542a;
+  letter-spacing: .9px;
+  margin: 4em auto;
+}
+
+.header-bottom-wrap {
+  border-top: 1px solid #DFDFDF;
+  border-bottom: 4px solid #131313;
+  padding: 11px 0;
+  margin-bottom: 2em;
+}
+
+.navbar-nav {
   float: left;
   height: 23px;
 }
-.nav-item{
+
+.nav-item {
   font-size: 13px;
   font-weight: 700;
   color: #fff;
@@ -112,48 +155,56 @@ margin-bottom: 2em;
   float: left;
   display: block;
 }
-.nav-item:first-child{
+
+.nav-item:first-child {
   padding-left: 0;
 }
-.nav-link{
-color: #3d3636;
+
+.nav-link {
+  color: #3d3636;
 }
-.row-flex{
+
+.row-flex {
   display: flex;
   flex-direction: row;
   gap: 0em;
   align-items: center;
 }
+
 .news-card {
   display: flex;
   flex-direction: column;
- /* margin: 1rem auto;*/
+  /* margin: 1rem auto;*/
   box-shadow: 0 3px 7px -1px rgba(0, 0, 0, .1);
   margin-bottom: 1.6%;
   background: #fff;
   line-height: 1.4;
-  
   border-radius: 5px;
   overflow: hidden;
   z-index: 0;
   border-radius: 3px;
   margin-top: 1em;
-border: solid 1px #ddd;
+  border: solid 1px #ddd;
 }
+
 .news-card a {
   color: inherit;
 }
+
 .news-card a:hover {
   color: #5ad67d;
 }
+
 .news-card:hover .photo {
   transform: scale(1.3) rotate(3deg);
 }
+
 .news-card .meta {
   position: relative;
   z-index: 0;
   height: 200px;
 }
+
 .news-card .photo {
   position: absolute;
   top: 0;
@@ -165,15 +216,19 @@ border: solid 1px #ddd;
   transition: transform 0.2s;
   background: #ddd;
 }
-.news-card .photo img{
-  max-width: 100%; 
+
+.news-card .photo img {
+  max-width: 100%;
   min-height: 100%;
 }
-.news-card .details, .news-card .details ul {
+
+.news-card .details,
+.news-card .details ul {
   margin: auto;
   padding: 0;
   list-style: none;
 }
+
 .news-card .details {
   position: absolute;
   top: 0;
@@ -187,33 +242,41 @@ border: solid 1px #ddd;
   width: 100%;
   font-size: 0.9rem;
 }
+
 .news-card .details a {
   text-decoration: dotted underline;
 }
+
 .news-card .details ul li {
   display: inline-block;
 }
+
 .news-card .details .author:before {
   font-family: FontAwesome;
   margin-right: 10px;
   content: "\f007";
 }
+
 .news-card .details .date:before {
   font-family: FontAwesome;
   margin-right: 10px;
   content: "\f133";
 }
+
 .news-card .details .tags ul:before {
   font-family: FontAwesome;
   content: "\f02b";
   margin-right: 10px;
 }
+
 .news-card .details .tags li {
   margin-right: 2px;
 }
+
 .news-card .details .tags li:first-child {
   margin-left: -4px;
 }
+
 .news-card .description {
   padding: 1rem;
   background: #fff;
@@ -223,10 +286,11 @@ border: solid 1px #ddd;
 
 .news-card .description h1 {
   line-height: 1.3;
-margin: 0;
-font-size: 1.4rem;
-font-weight: 600;
+  margin: 0;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
+
 .news-card .description h2 {
   font-size: 1rem;
   font-weight: 300;
@@ -234,15 +298,18 @@ font-weight: 600;
   color: #a2a2a2;
   margin-top: 5px;
 }
+
 .news-card .description .read-more {
   text-align: right;
 }
+
 .news-card .description .read-more a {
   color: #5ad67d;
   display: inline-block;
   position: relative;
   font-weight: 600;
 }
+
 .news-card .description .read-more a:after {
   content: "\f061";
   font-family: FontAwesome;
@@ -251,17 +318,21 @@ font-weight: 600;
   vertical-align: middle;
   transition: margin 0.3s, opacity 0.3s;
 }
+
 .news-card .description .read-more a:hover:after {
   margin-left: 5px;
   opacity: 1;
 }
+
 .news-card p {
   position: relative;
   margin: 1rem 0 0;
 }
+
 .news-card p:first-of-type {
   margin-top: 1.25rem;
 }
+
 .news-card p:first-of-type:before {
   content: "";
   position: absolute;
@@ -272,77 +343,43 @@ font-weight: 600;
   top: -0.75rem;
   border-radius: 3px;
 }
+
 .news-card:hover .details {
   left: 0%;
 }
 
-.checkbtn{
+.checkbtn {
   font-size: 30px;
   color: white;
-  float: right;
+  float: left;
   line-height: 80px;
   margin-right: 40px;
   cursor: pointer;
   display: none;
+  margin-left: 0.5em;
 }
-#check{
+
+#check {
   display: none;
 }
- 
-.search-bar{
+
+.search-bar {
   flex-basis: 70%;
 }
-.ui.input{
+
+.ui.input {
   min-width: 100%;
 }
-.prompt{
+
+.prompt {
   border-radius: 3px !important;
-} 
-
-
-
-
-
-@media screen and (min-width: 600px) {
-  .news-card {
-      flex-direction: row;
-      max-width: 900px;
- }
-  .news-card .meta {
-      flex-basis: 40%;
-      height: auto;
- }
-  .news-card .description {
-      flex-basis: 60%;
- }
-  .news-card .description:before {
-      
-      content: "";
-      background: #fff;
-      width: 30px;
-      position: absolute;
-      left: -10px;
-      top: 0;
-      bottom: 0;
-      z-index: -1;
- }
-  .news-card.alt {
-      flex-direction: row-reverse;
- }
-  .news-card.alt .description:before {
-      left: inherit;
-      right: -10px;
-      transform: skew(3deg);
- }
-  .news-card.alt .details {
-      padding-left: 25px;
- }
 }
 
-.block-title > span {
+
+.block-title>span {
   color: #ff3000 !important;
-font-size: 24px !important;
-font-weight: 900 !important;
+  font-size: 24px !important;
+  font-weight: 900 !important;
 }
 
 .block-title {
@@ -357,7 +394,8 @@ font-weight: 900 !important;
   -webkit-transform: translateZ(0);
   text-align: left;
 }
- .block-subtitle {
+
+.block-subtitle {
   font-size: 90px;
   text-transform: uppercase;
   position: absolute;
@@ -368,5 +406,236 @@ font-weight: 900 !important;
   color: #f3f3f3;
   line-height: 1;
   color: #0000001a;
-line-height: 1;
+  line-height: 1;
+}
+.weather-card{
+  min-height: 400px;
+width: 100%;
+margin-top: 1em;
+border: solid 1px #e6e6e6;
+float: left;
+box-shadow: 0 3px 7px -1px rgba(0, 0, 0, .1);
+border-radius: 3px;
+padding: 2rem;
+position: sticky;
+top: 25px;
+margin-bottom: 50px;
+}
+.social-icons > a{
+  margin: 10px;
+  color: #000;
+  font-size: 19px;
+  border: solid 1px #7b7b7b;
+  padding: 7px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 1.5em;
+}
+.social-icons > a:hover{
+  border-color: inherit;
+}
+.fa-facebook:hover {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter:hover {
+  background: #55ACEE;
+  color: white;
+}
+.logo{
+  width: 180px;
+  margin-bottom: 3em;
+}
+
+.fa-google:hover {
+  background: #dd4b39;
+  color: white;
+}
+.fa-youtube:hover {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram:hover {
+  background: #125688;
+  color: white;
+}
+.mobileshow{
+display: none;
+}
+.mobileshow .block-subtitle {
+  color: #c8c8c81a;
+}
+@media screen and (min-device-width: 848px) and (max-device-width: 987px) { 
+  .header-container{
+    gap: 1rem;
+  }
+  .logo{
+    flex-basis: auto;
+    margin-bottom: 1em;
+  }
+  .search-bar{
+    flex-basis: auto !important;
+  }
+  .social-icons{
+    flex-basis: auto;
+    margin: 0 !important;
+  }
+  .header-container > div:last-child{
+    flex-basis: auto;
+  }
+  .fields,.field,.ui.input{
+    width: 100%;
+    margin: 1rem;
+  }
+  #news_search{
+    margin: 1em;
+  }
+}
+@media screen and (min-device-width: 988px) and (max-device-width: 1211px) { 
+  .header-container{
+    gap: 1rem;
+  }
+  .logo{
+    flex-basis: auto;
+    margin-bottom: 1em;
+  }
+  .search-bar{
+    flex-basis: auto !important;
+  }
+  .social-icons{
+    flex-basis: auto;
+    margin: 0 !important;
+  }
+  .header-container > div:last-child{
+    flex-basis: auto;
+  }
+}
+@media screen and (max-width: 847px) {
+
+  .logo{
+      margin-bottom: 1em;
+  }
+  .search-bar {
+      display: none;
+  }
+  .weather_info {
+      float: right;
+      position: absolute;
+      top: 11px;
+      right: 18px;
+  }
+  .checkbtn {
+      display: block;
+      color: #131313;
+  }
+  .navbar-nav {
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: #131313;
+      top: 0;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
+      z-index: 10;
+      padding: 3em 3em;
+      overflow: hidden;
+  }
+  .navbar-nav li {
+      display: block;
+      margin: 4px 0;
+      line-height: 30px;
+      clear: both;
+      color: #fff;
+  }
+  .navbar-nav li a {
+      font-size: 20px;
+      color: #fff;
+      padding: 5px;
+  }
+  .navbar-nav li a:hover,
+  .navbar-nav li a.active {
+      background: none;
+      color: #0082e6;
+      transform: scale(2, 2);
+  }
+  #check:checked~ul, .opennav {
+      left: 0;
+  }
+  .header-container {
+      gap: 0.5em;
+      align-items: center;
+  }
+  #logo-head {
+      margin: 1em auto;
+      
+
+  }
+  .logo {
+      float: left;
+      width: 100%;
+  }
+  .flex-basis-70,.flex-basis-30{
+    flex: 1 1;
+width: 100%;
+  }
+  .d-flex-rows{
+    flex-direction: column;
+  }
+  .social-icons{ 
+    margin: 0 auto;}
+    .mobileshow{
+      display: block;
+    }
+  }
+
+@media screen and (min-width: 600px) {
+  .mobileshow{
+    display: block;
+  }
+  .social-icons{ 
+    margin: 0 auto;}
+  .news-card {
+      flex-direction: row;
+      max-width: 95%;
+  }
+  .news-card .meta {
+      flex-basis: 40%;
+      height: auto;
+  }
+  .news-card .description {
+      flex-basis: 60%;
+  }
+  .news-card .description:before { 
+      content: "";
+      background: #fff;
+      width: 30px;
+      position: absolute;
+      left: -10px;
+      top: 0;
+      bottom: 0;
+      z-index: -1;
+  }
+  .news-card.alt {
+      flex-direction: row-reverse;
+  }
+  .news-card.alt .description:before {
+      left: inherit;
+      right: -10px;
+      transform: skew(3deg);
+  }
+  .news-card.alt .details {
+      padding-left: 25px;
+  }
+
+  .flex-basis-70,.flex-basis-30{
+    flex-basis: 100%;
+  }
+  .d-flex-rows{
+    flex-direction: column;
+  }
 }
