--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ flex-direction: row;
 
 .news-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   /* margin: 1rem auto;*/
   box-shadow: 0 3px 7px -1px rgba(0, 0, 0, .1);
   margin-bottom: 1.6%;
@@ -185,6 +185,7 @@ flex-direction: row;
   border-radius: 3px;
   margin-top: 1em;
   border: solid 1px #ddd;
+  max-width: 95%;
 }
 
 .news-card a {
@@ -409,7 +410,7 @@ flex-direction: row;
   line-height: 1;
 }
 .weather-card{
-  min-height: 400px;
+  min-height: 300px;
 width: 100%;
 margin-top: 1em;
 border: solid 1px #e6e6e6;
@@ -420,6 +421,21 @@ padding: 2rem;
 position: sticky;
 top: 25px;
 margin-bottom: 50px;
+}
+
+.weather-card h2:first-of-type{
+  position: relative;
+  margin-bottom: 2em;
+}
+.weather-card h2:first-of-type::before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #5ad67d;
+  background: #5ad67d;
+  width: 35px;
+  bottom: -11px;
+  border-radius: 3px;
 }
 .social-icons > a{
   margin: 10px;
@@ -469,6 +485,17 @@ display: none;
 .mobileshow .block-subtitle {
   color: #c8c8c81a;
 }
+.fields,.field,.ui.input{
+  width: 100%;
+  margin: 1rem;
+}
+.news-card .meta {
+  flex-basis: 40%;
+  height: auto;
+}
+.news-card .description {
+  flex-basis: 60%;
+}
 @media screen and (min-device-width: 848px) and (max-device-width: 987px) { 
   .header-container{
     gap: 1rem;
@@ -514,6 +541,7 @@ display: none;
     flex-basis: auto;
   }
 }
+
 @media screen and (max-width: 847px) {
 
   .logo{
@@ -572,10 +600,13 @@ display: none;
   }
   #logo-head {
       margin: 1em auto;
-      
-
+  } 
+     
   }
-  .logo {
+  @media (min-width: 320px) and (max-width: 846px)
+  {
+     
+    .logo {
       float: left;
       width: 100%;
   }
@@ -591,21 +622,20 @@ width: 100%;
     .mobileshow{
       display: block;
     }
-  }
-
-@media screen and (min-width: 600px) {
   .mobileshow{
     display: block;
   }
   .social-icons{ 
     margin: 0 auto;}
-  .news-card {
-      flex-direction: row;
-      max-width: 95%;
+
+    .news-card {
+      flex-direction: column;
+      max-width: 100%;
   }
   .news-card .meta {
       flex-basis: 40%;
       height: auto;
+      min-height: 200px;
   }
   .news-card .description {
       flex-basis: 60%;
@@ -638,4 +668,4 @@ width: 100%;
   .d-flex-rows{
     flex-direction: column;
   }
-}
+  }
